# multi-agent_urban

./: .gitignore  LICENSE  README.md  helloworld.py  main.py  multi-agent_urban.py  pyproject.toml  run_demo.py  science.md
.github/workflows/: launch-control-room.yml
backend/: pyproject.toml
backend/docs/: README.md
backend/src/urban_forest_ai/: __init__.py  cli.py  data_loader.py  debate.py  denario_adapter.py  explainability.py  main.py  marl.py  models.py  pipeline.py  scoring.py  settings.py  telemetry.py  visualizations.py
backend/src/urban_forest_ai/marl/: __init__.py
configs/: base_experiment.yaml
docs/: ARCHITECTURE.md  RESEARCH_PLAN.md  SYSTEM_DIAGRAM.md
docs/showcase/: README.md
files/: langgraph_reference.py  langgraph_starter.py  project_ideas.py
frontend/: README.md  app.py
notes/: career_platform_takeaways.md  portfolio_summary.md
prompts/: README.md
scripts/: README.md  export_static_report.py
tests/: README.md
