[project]
name = "urban-forest-denario"
version = "0.1.0"
description = "Multi-agent urban tree planting prototype with LangGraph orchestration and Denario compatibility hooks."
requires-python = ">=3.12,<3.14"
dependencies = [
  "openai",
  "pyarrow",
  "pandas",
  "numpy",
  "networkx",
  "langgraph",
  "langfuse",
  "python-dotenv",
  "shapely",
  "streamlit",
  "denario",
  "ag2[openai]",
  "plotly>=5.20",
  "pyproj>=3.6",
]

[project.scripts]
urban-forest-demo = "urban_forest_ai.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
